Updated Comparison Details and Login Check Pages

--- a/comparison.html
+++ b/comparison.html
@@ -9,7 +9,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 	</head>
-	<body class="index is-preload" onload="fillData()">
+	<body class="index is-preload" onload="checkLogin();fillData()">
 		<div id="page-wrapper">
 
 			<!-- Header -->
