--- a/comparisonDetails.html
+++ b/comparisonDetails.html
@@ -9,7 +9,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 	</head>
-	<body class="index is-preload" onload="showScenarioComparison()">
+	<body class="index is-preload" onload="checkLogin();showScenarioComparison()">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -20,9 +20,9 @@
                         <li class="submenu">
                             <a href="#">Top 3 Scenarios </a>
                             <ul>
-                                <li><a href="#">Scenario 1</a></li>
-                                <li><a href="#">Scenario 2</a></li>
-                                <li><a href="#">Scenario 3</a></li>
+                                <li><a onclick="goToScenario(1)">Scenario 1</a></li>
+                                <li><a onclick="goToScenario(2)">Scenario 2</a></li>
+                                <li><a onclick="goToScenario(3)">Scenario 3</a></li>
                             </ul>
                         </li>
                         <li><a onclick="redirectToOrder()" class="button" style="border: 1px solid;">New Order</a></li>
@@ -37,28 +37,33 @@
 				<header class="special container">
 					<span class="icon solid fa-chart-bar"></span>
                     <h2><strong>Comparison Details</strong></h2>
-                    Here, you can compare the actual metrics of the top 3 scenarios.
+                    Here, you can compare the metrics of the top 3 scenarios.
 				</header>
 				<section class="wrapper style4 container special-alt">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-narrower">
-							<div>
-								<h1>Scenario 1</h1>
-								<p id="cost1"><strong>Total Cost</strong>: </p>
-								<p id="time1"><strong>Total Time</strong>: </p>
-								<p id="mould1"><strong>Required Mould Changes</strong>: </p>
+					<div class="row gtr-200">
+						<div class="col-4 col-12-narrower">
+							<div style="background-color: #83d3c9;border: 1px solid black;padding: 10px;color: black;">
+								<h1><strong>Scenario 1</strong></h1>
+								<p id="cost1" style="margin-bottom: 5px;"><strong>Total Cost</strong>: </p>
+								<p id="time1" style="margin-bottom: 5px;"><strong>Total Time</strong>: </p>
+								<p id="mould1" style="margin-bottom: 15px;"><strong>Required Mould Changes</strong>: </p>
+								<a onclick="goToScenario(1)" class="button" style="border: 1px solid;">Go to Scenario 1</a>
 							</div>
-							<div>
-								<h1>Scenario 2</h1>
-								<p id="cost2"><strong>Total Cost</strong>: </p>
-								<p id="time2"><strong>Total Time</strong>: </p>
-								<p id="mould2"><strong>Required Mould Changes</strong>: </p>
+						</br></br>
+							<div style="background-color: #49d49d;border: 1px solid black;padding: 10px;color: black;">
+								<h1><strong>Scenario 2</strong></h1>
+								<p id="cost2" style="margin-bottom: 5px;"><strong>Total Cost</strong>: </p>
+								<p id="time2" style="margin-bottom: 5px;"><strong>Total Time</strong>: </p>
+								<p id="mould2" style="margin-bottom: 15px;"><strong>Required Mould Changes</strong>: </p>
+								<a onclick="goToScenario(2)" class="button" style="border: 1px solid;">Go to Scenario 2</a>
 							</div>
-							<div>
-								<h1>Scenario 3</h1>
-								<p id="cost3"><strong>Total Cost</strong>: </p>
-								<p id="time3"><strong>Total Time</strong>: </p>
-								<p id="mould3"><strong>Required Mould Changes</strong>: </p>
+						</br></br>
+							<div style="background-color: #15b097;border: 1px solid black;padding: 10px;color: black;">
+								<h1><strong>Scenario 3</strong></h1>
+								<p id="cost3" style="margin-bottom: 5px;"><strong>Total Cost</strong>: </p>
+								<p id="time3" style="margin-bottom: 5px;"><strong>Total Time</strong>: </p>
+								<p id="mould3" style="margin-bottom: 15px;"><strong>Required Mould Changes</strong>: </p>
+								<a onclick="goToScenario(3)" class="button" style="border: 1px solid;">Go to Scenario 3</a>
 							</div>	
 						</div>      
 						<div class="col-6 col-12-narrower">
