--- a/submitted.html
+++ b/submitted.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="index is-preload" onload="populatePage()">
+	<body class="index is-preload" onload="checkLogin();populatePage()">
 		<div id="page-wrapper">
 
 			<!-- Header -->
