--- a/comparison.html
+++ b/comparison.html
@@ -20,9 +20,10 @@
                         <li class="submenu">
                             <a href="#">Top 3 Scenarios </a>
                             <ul>
-                                <li><a href="#">Scenario 1</a></li>
-                                <li><a href="#">Scenario 2</a></li>
-                                <li><a href="#">Scenario 3</a></li>
+								<li><a href="comparison.html">Comparison</a></li>
+                                <li><a onclick="goToScenario(1)">Scenario 1</a></li>
+                                <li><a onclick="goToScenario(2)">Scenario 2</a></li>
+                                <li><a onclick="goToScenario(3)">Scenario 3</a></li>
                             </ul>
                         </li>
                         <li><a onclick="redirectToOrder()" class="button" style="border: 1px solid;">New Order</a></li>
