--- a/comparisonDetails.html
+++ b/comparisonDetails.html
@@ -20,6 +20,7 @@
                         <li class="submenu">
                             <a href="#">Top 3 Scenarios </a>
                             <ul>
+								<li><a href="comparison.html">Comparison</a></li>
                                 <li><a onclick="goToScenario(1)">Scenario 1</a></li>
                                 <li><a onclick="goToScenario(2)">Scenario 2</a></li>
                                 <li><a onclick="goToScenario(3)">Scenario 3</a></li>
