--- a/comparison.html
+++ b/comparison.html
@@ -21,9 +21,9 @@
                             <a href="#">Top 3 Scenarios </a>
                             <ul>
 								<li><a href="comparison.html">Comparison</a></li>
-                                <li><a onclick="goToScenario(1)">Scenario 1</a></li>
-                                <li><a onclick="goToScenario(2)">Scenario 2</a></li>
-                                <li><a onclick="goToScenario(3)">Scenario 3</a></li>
+                                <li><a onclick="goToScenario(4)">Best Scenario Cost</a></li>
+                                <li><a onclick="goToScenario(7)">Best Scenario Time</a></li>
+                                <li><a onclick="goToScenario(9)">Best Scenario Mould Changes</a></li>
                             </ul>
                         </li>
                         <li><a onclick="redirectToOrder()" class="button" style="border: 1px solid;">New Order</a></li>
@@ -37,30 +37,28 @@
 			<article id="main">
 				<header class="special container">
 					<span class="icon solid fa-chart-bar"></span>
-                    <h2><strong>Top 3 Scenarios Comparison</strong></h2>
-                    Here, you can graphically compare the top 3 production scenarios.
+                    <h2><strong>Scenarios Comparison</strong></h2>
+                    Here, you can graphically compare the production scenarios.
 				</header>
 				<section class="wrapper style4 container special-alt">
 					<div class="row gtr-50">
 						<div class="col-12 col-12-narrower">
 							
 							<div id='layout'>
-								<div id='container'>
-								  <svg />
-								</div>
+								<div id='container'></div>
 							</div>
-
+						</br>
 							<div id='layout'>
 								<div id='containerTime'></div>
 							</div>
-
+						</br>
 							<div id='layout'>
 								<div id='containerMould'></div>
 							</div>
 
 						</br>
                             <div style="text-align: center;">
-                                <a href="comparisonDetails.html" class="button">Show Details</a>
+                                <a href="comparisonDetails.html" class="button">Show Top 3 Scenarios</a>
                             </div>
                             
 						</div>       
