--- a/scenarioMetrics.html
+++ b/scenarioMetrics.html
@@ -22,9 +22,9 @@
                             <a href="#">Top 3 Scenarios </a>
                             <ul>
 								<li><a href="comparison.html">Comparison</a></li>
-                                <li><a onclick="goToScenario(1)">Scenario 1</a></li>
-                                <li><a onclick="goToScenario(2)">Scenario 2</a></li>
-                                <li><a onclick="goToScenario(3)">Scenario 3</a></li>
+                                <li><a onclick="goToScenario(4)">Best Scenario Cost</a></li>
+                                <li><a onclick="goToScenario(7)">Best Scenario Time</a></li>
+                                <li><a onclick="goToScenario(9)">Best Scenario Mould Changes</a></li>
                             </ul>
                         </li>
                         <li><a onclick="redirectToOrder()" class="button" style="border: 1px solid;">New Order</a></li>
