Ease of use Updates

--- a/comparison.html
+++ b/comparison.html
@@ -20,7 +20,7 @@
                         <li class="submenu">
                             <a href="#">Top 3 Scenarios </a>
                             <ul>
-								<li><a href="comparison.html">Comparison</a></li>
+								<li><a href="comparisonDetails.html">Top 3 Comparison</a></li>
                                 <li><a onclick="goToScenario(4)">Best Scenario Cost</a></li>
                                 <li><a onclick="goToScenario(7)">Best Scenario Time</a></li>
                                 <li><a onclick="goToScenario(9)">Best Scenario Mould Changes</a></li>
@@ -58,7 +58,7 @@
 
 						</br>
                             <div style="text-align: center;">
-                                <a href="comparisonDetails.html" class="button">Show Top 3 Scenarios</a>
+                                <a href="comparisonDetails.html" class="button">Go to Top 3 Scenarios</a>
                             </div>
                             
 						</div>       
