--- a/scenarioDetails.html
+++ b/scenarioDetails.html
@@ -20,7 +20,7 @@
                         <li class="submenu">
                             <a href="#">Top 3 Scenarios </a>
                             <ul>
-								<li><a href="comparison.html">Comparison</a></li>
+								<li><a href="comparisonDetails.html">Top 3 Comparison</a></li>
                                 <li><a onclick="goToScenario(4)">Best Scenario Cost</a></li>
                                 <li><a onclick="goToScenario(7)">Best Scenario Time</a></li>
                                 <li><a onclick="goToScenario(9)">Best Scenario Mould Changes</a></li>
