Bar with click and Graphic Changes

--- a/comparison.html
+++ b/comparison.html
@@ -38,7 +38,7 @@
 				<header class="special container">
 					<span class="icon solid fa-chart-bar"></span>
                     <h2><strong>Scenarios Comparison</strong></h2>
-                    Here, you can graphically compare the production scenarios.
+                    <p>Here, you can graphically compare the production scenarios.</p>
 				</header>
 				<section class="wrapper style4 container special-alt">
 					<div class="row gtr-50">
