--- a/orderpage.html
+++ b/orderpage.html
@@ -24,7 +24,7 @@
           <article id="main">
             <header class="special container">
               <span class="icon solid fa-envelope"></span>
-              <h2>Insert New Order</h2>
+              <h2><strong>Insert New Order</strong></h2>
               <p>Use the form below to insert a new order.</p>
             </header>
 
