--- a/scenarioDetails.html
+++ b/scenarioDetails.html
@@ -38,7 +38,7 @@
 				<header class="special container">
 					<span class="icon solid fa-chart-bar"></span>
                     <h2><strong>Scenario Details</strong></h2>
-                    Here, you can analyze and export the metrics of the single scenario.
+                    <p>Here, you can analyze and export the metrics of the single scenario.</p>
 				</header>
 				<section class="wrapper style4 container special-alt">
 					<div class="row gtr-50">
