--- a/submitted.html
+++ b/submitted.html
@@ -29,7 +29,7 @@
                     <h2>The order has been <strong>correctly</strong>
                     <br />
                     inserted in the system.</h2>
-                    Here, you can review the details.
+                    <p>Here, you can review the details.</p>
 				</header>
 				<section class="wrapper style2 container special-alt">
 					<div class="row gtr-50">
