--- a/comparisonDetails.html
+++ b/comparisonDetails.html
@@ -43,36 +43,39 @@
 				
 				<section class="wrapper style4 container special-alt">
 					<div class="row gtr-150" style="text-align: center; padding: 10px 0 0 60px;">	
-						<div class="col-4 col-12-narrower">
-							<div style="background-color: #006d2c;border: 1px solid black;padding-left: 15px;color: black;">
-								<div style="background-color: white;text-align: left;">
-									<h1 style="font-weight:bold;font-size:14pt;margin-left: 10px;"><strong>Best for Cost</strong></h1>
+						<div class="col-5 col-12-narrower" style="margin-top: 10px;">
+							<div style="background-color: #006d2c;border: 1px solid;padding-left: 20px;">
+								<div style="background-color: white;text-align: left;padding-bottom:15px;">
+									<h1 style="font-weight:bold;margin-left: 10px;color: black;"><strong>Best Cost Scenario</strong></h1>
 									<p id="cost1" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
 									<p id="time1" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
 									<p id="mould1" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;"><strong>Required Mould Changes</strong>: </p>
-									<a onclick="goToScenario(4)" class="button" style="display: block; width: 150px; margin: 0 auto; border: 1px solid;">Go to Scenario</a></div>
+									<a onclick="goToScenario(4)" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
+								</div>
 							</div>
-						<br><br>
-							<div style="background-color: #2ca25f;border: 1px solid black;padding: 10px;color: black;">
-								<h1 style="font-weight:bold;"><strong>Best for Time</strong></h1>
-								<p id="cost2" style="margin-bottom: 5px;"><strong>Total Cost</strong>: </p>
-								<p id="time2" style="margin-bottom: 5px;"><strong>Total Time</strong>: </p>
-								<p id="mould2" style="margin-bottom: 15px;"><strong>Required Mould Changes</strong>: </p>
-								<a onclick="goToScenario(7)" class="button" style="border: 1px solid;">Go to Scenario</a>
+							<div style="background-color: #2ca25f;border: 1px solid;padding-left: 20px;margin-top: 101px;">
+								<div style="background-color: white;text-align: left;padding-bottom:15px;">
+									<h1 style="font-weight:bold;margin-left: 10px;color: black;"><strong>Best Time Scenario</strong></h1>
+									<p id="cost2" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
+									<p id="time2" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
+									<p id="mould2" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;"><strong>Required Mould Changes</strong>: </p>
+									<a onclick="goToScenario(7)" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
+								</div>
 							</div>
-						<br><br>
-							<div style="background-color: #66c2a4;border: 1px solid black;padding: 10px;color: black;">
-								<h1 style="font-weight:bold;"><strong>Best for Mould Changes</strong></h1>
-								<p id="cost3" style="margin-bottom: 5px;"><strong>Total Cost</strong>: </p>
-								<p id="time3" style="margin-bottom: 5px;"><strong>Total Time</strong>: </p>
-								<p id="mould3" style="margin-bottom: 15px;"><strong>Required Mould Changes</strong>: </p>
-								<a onclick="goToScenario(9)" class="button" style="border: 1px solid;">Go to Scenario</a>
+							<div style="background-color: #66c2a4;border: 1px solid;padding-left: 20px;margin-top: 100px;">
+								<div style="background-color: white;text-align: left;padding-bottom:15px;">
+									<h1 style="font-weight:bold;margin-left: 10px;color: black;"><strong>Best Mould Changes Scenario</strong></h1>
+									<p id="cost3" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
+									<p id="time3" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
+									<p id="mould3" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;"><strong>Required Mould Changes</strong>: </p>
+									<a onclick="goToScenario(9)" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
+								</div>
 							</div>	
 						</div>
 					
-						<div class="col-8 col-12-narrower">
+						<div class="col-7 col-12-narrower">
 							<div id='layout'>
-								<div id='containerCost' style="height:330px;width:530px; margin-left: 57px;margin-top: -40px;"></div>
+								<div id='containerCost' style="height:330px;width:530px; margin-left: 10px;margin-top: -40px;"></div>
 							</div>
 							<div id='layout'>
 								<div id='containerTime' style="height:330px;width:530px"></div>
