--- a/submitted.html
+++ b/submitted.html
@@ -47,7 +47,7 @@
                             </div>
                             <footer>
                                 <ul class="buttons">
-                                    <li><a href="comparison.html" class="button">Go To Scenarios</a></li>
+                                    <li><a href="comparison.html" class="button">Go To Scenarios Comparison</a></li>
                                 </ul>
                             </footer>
 						</div>        
