Security Checks and Other Small Fixes

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 					<div class="wrapper style1 container special-alt">
 						<form id="login-form">
 							<label for="personal-id">Personal ID:</label>
-							<input type="text" id="personal-id" name="personal-id" style="border: 1px solid white; width: 450px;margin: 0 auto;">
+							<input type="text" id="personal-id" name="personal-id" style="border: 1px solid white; width: 450px;margin: 0 auto;" required>
 							<label for="password">Password:</label>
-							<input type="password" id="password" name="password" style="border: 1px solid white; width: 450px;margin: 0 auto;"><br><br>
+							<input type="password" id="password" name="password" style="border: 1px solid white; width: 450px;margin: 0 auto;" required><br><br>
 							<input type="submit" value="Login">
 						</form>
 					</div>			
