--- a/scenarioDetails.html
+++ b/scenarioDetails.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/bar_chart.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://d3js.org/d3.v5.min.js"></script>
+		<script src="assets/js/d3.v5.min.js"></script>
 	</head>
 	<body class="index is-preload" onload="checkLogin();fillScenarioDetails()">
 		<div id="page-wrapper">
