--- a/scenarioMetrics.html
+++ b/scenarioMetrics.html
@@ -7,8 +7,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/bar_chart.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://d3js.org/d3.v4.js"></script>
-		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+		<script src="assets/js/d3.v4.js"></script>
+		<script src="assets/js/d3-scale-chromatic.v1.min.js"></script>
 	</head>
 	<body class="index is-preload" onload="checkLogin();fillScenarioMetrics()">
 		<div id="page-wrapper">
