--- a/orderpage.html
+++ b/orderpage.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body onload="checkLogin()" class="index is-preload">
+	<body onload="checkLogin();checkDate()" class="index is-preload">
       <div id="page-wrapper">
 
           <!-- Header -->
@@ -34,8 +34,8 @@
                     <form id="myForm" onsubmit="submitForm(); return false;">
                       <div class="row gtr-50">
                         <div class="col-6 col-12-mobile" style="display: flex; flex-direction: row;">
-                          <label for="customer" >Customer:</label>
-                          <input type="text" id="customer" name="customer" style="border: 1px solid; margin-left: 42px; padding: 0%;" required>
+                          <label for="customer">Customer:</label>
+                          <input type="text" id="customer" name="customer" style="border: 1px solid; margin-left: 42px; padding: 0%;width: 270px;"  required>
                         </div>
 
                         <div class="col-12 col-12-mobile" style="display: flex; flex-direction: row;">
