--- a/comparisonDetails.html
+++ b/comparisonDetails.html
@@ -46,29 +46,29 @@
 						<div class="col-5 col-12-narrower" style="margin-top: 10px;">
 							<div style="background-color: #006d2c;border: 1px solid;padding-left: 20px;">
 								<div style="background-color: white;text-align: left;padding-bottom:15px;">
-									<h1 style="font-weight:bold;margin-left: 10px;color: black;"><strong>Best Cost Scenario</strong></h1>
+									<h1 id="scenario1" style="margin-left: 10px;color: black;"><strong>Best Cost: Scenario </strong></h1>
 									<p id="cost1" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
 									<p id="time1" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
 									<p id="mould1" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;"><strong>Required Mould Changes</strong>: </p>
-									<a onclick="goToScenario(4)" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
+									<a id="button1" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
 								</div>
 							</div>
 							<div style="background-color: #2ca25f;border: 1px solid;padding-left: 20px;margin-top: 101px;">
 								<div style="background-color: white;text-align: left;padding-bottom:15px;">
-									<h1 style="font-weight:bold;margin-left: 10px;color: black;"><strong>Best Time Scenario</strong></h1>
+									<h1 id="scenario2" style="margin-left: 10px;color: black;"><strong>Best Time: Scenario </strong></h1>
 									<p id="cost2" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
 									<p id="time2" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
 									<p id="mould2" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;"><strong>Required Mould Changes</strong>: </p>
-									<a onclick="goToScenario(7)" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
+									<a id="button2" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
 								</div>
 							</div>
 							<div style="background-color: #66c2a4;border: 1px solid;padding-left: 20px;margin-top: 100px;">
 								<div style="background-color: white;text-align: left;padding-bottom:15px;">
-									<h1 style="font-weight:bold;margin-left: 10px;color: black;"><strong>Best Mould Changes Scenario</strong></h1>
+									<h1 id="scenario3" style="margin-left: 10px;color: black;"><strong>Best Mould Changes: Scenario </strong></h1>
 									<p id="cost3" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
 									<p id="time3" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
 									<p id="mould3" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;"><strong>Required Mould Changes</strong>: </p>
-									<a onclick="goToScenario(9)" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
+									<a id="button3" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
 								</div>
 							</div>	
 						</div>
