--- a/comparisonDetails.html
+++ b/comparisonDetails.html
@@ -42,10 +42,10 @@
 				</header>
 				
 				<section class="wrapper style4 container special-alt">
-					<div class="row gtr-150" style="text-align: center; padding: 10px 0 0 60px;">	
-						<div class="col-5 col-12-narrower" style="margin-top: 10px;">
+					<div class="row gtr-150" style="text-align: center; padding: 0px 0 0 60px;">	
+						<div class="col-5 col-12-narrower" style="margin-top: 13px;">
 							<div style="background-color: #006d2c;border: 1px solid;padding-left: 20px;">
-								<div style="background-color: white;text-align: left;padding-bottom:15px;">
+								<div style="background-color: white;text-align: left;padding-bottom:12px;">
 									<h1 id="scenario1" style="margin-left: 10px;color: black;"><strong>Best Cost: Scenario </strong></h1>
 									<p id="cost1" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
 									<p id="time1" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
@@ -53,7 +53,7 @@
 									<a id="button1" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
 								</div>
 							</div>
-							<div style="background-color: #2ca25f;border: 1px solid;padding-left: 20px;margin-top: 101px;">
+							<div style="background-color: #2ca25f;border: 1px solid;padding-left: 20px;margin-top: 105px;">
 								<div style="background-color: white;text-align: left;padding-bottom:15px;">
 									<h1 id="scenario2" style="margin-left: 10px;color: black;"><strong>Best Time: Scenario </strong></h1>
 									<p id="cost2" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
@@ -64,7 +64,7 @@
 							</div>
 							<div style="background-color: #66c2a4;border: 1px solid;padding-left: 20px;margin-top: 100px;">
 								<div style="background-color: white;text-align: left;padding-bottom:15px;">
-									<h1 id="scenario3" style="margin-left: 10px;color: black;"><strong>Best Mould Changes: Scenario </strong></h1>
+									<h1 id="scenario3" style="margin-left: 10px;color: black;"><strong>Best M_Changes: Scenario </strong></h1>
 									<p id="cost3" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
 									<p id="time3" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
 									<p id="mould3" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;"><strong>Required Mould Changes</strong>: </p>
@@ -75,7 +75,7 @@
 					
 						<div class="col-7 col-12-narrower">
 							<div id='layout'>
-								<div id='containerCost' style="height:330px;width:530px; margin-left: 67px;margin-top: -40px;"></div>
+								<div id='containerCost' style="height:330px;width:530px; margin-left: 13px;margin-top: -40px;"></div>
 							</div>
 							<div id='layout'>
 								<div id='containerTime' style="height:330px;width:530px"></div>
