--- a/comparison.html
+++ b/comparison.html
@@ -14,11 +14,11 @@
 
 			<!-- Header -->
             <header id="header">
-                <h1 id="logo">What If Analyzer</a></h1>
+                <h1 id="logo"><a href="comparison.html">What If Analyzer</a></h1>
                 <nav id="nav">
                     <ul>
                         <li class="submenu">
-                            <a href="#">Top 3 Scenarios </a>
+                            <a href="#">Top 3 Scenarios</a>
                             <ul>
 								<li><a href="comparisonDetails.html">Top 3 Comparison</a></li>
                                 <li><a id="topCost" onclick="goToScenario(JSON.parse(localStorage.getItem('top3'))[0])">Best Scenario Cost</a></li>
@@ -32,7 +32,6 @@
                 </nav>
             </header>
 
-			
 			<!-- Main -->
 			<article id="main">
 				<header class="special container">
@@ -88,7 +87,6 @@
 		<script src="assets/js/util.js"></script>
         <script src="assets/js/main.js"></script>
 		<script src="assets/js/scenario.js"></script>
-		
 
 	</body>
 </html>
