--- a/orderpage.html
+++ b/orderpage.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/bar_chart.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body onload="checkLogin();checkDate()" class="index is-preload">
@@ -12,7 +13,7 @@
 
           <!-- Header -->
 				<header id="header">
-					<h1 id="logo">What If Analyzer</a></h1>
+					<h1 id="logo"><a href="orderpage.html">What If Analyzer</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a onclick="logout()" class="button primary">Logout</a></li>
