--- a/scenarioMetrics.html
+++ b/scenarioMetrics.html
@@ -15,11 +15,11 @@
 
 			<!-- Header -->
             <header id="header">
-                <h1 id="logo">What If Analyzer</a></h1>
+                <h1 id="logo"><a href="comparison.html">What If Analyzer</a></h1>
                 <nav id="nav">
                     <ul>
                         <li class="submenu">
-                            <a href="#">Top 3 Scenarios </a>
+                            <a href="#">Top 3 Scenarios</a>
                             <ul>
 								<li><a href="comparisonDetails.html">Top 3 Comparison</a></li>
                                 <li><a id="topCost" onclick="goToScenario(JSON.parse(localStorage.getItem('top3'))[0])">Best Scenario Cost</a></li>
