--- a/submitted.html
+++ b/submitted.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="assets/css/bar_chart.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="index is-preload" onload="checkLogin();populatePage()">
@@ -12,7 +13,7 @@
 
 			<!-- Header -->
             <header id="header">
-                <h1 id="logo">What If Analyzer</a></h1>
+                <h1 id="logo"><a href="submitted.html">What If Analyzer</a></h1>
                 <nav id="nav">
                     <ul>
                         <li><a onclick="redirectToOrder()" class="button" style="border: 1px solid;">New Order</a></li>
