Updated README, Loading Slider&Back to Details

--- a/comparisonDetails.html
+++ b/comparisonDetails.html
@@ -101,7 +101,7 @@
 					
 					<div class="row gtr-150" style="text-align: center; padding: 0px 0 0 60px;">
 						<div style="text-align: center; margin: 0 auto; width: 500px;">
-							<a href="comparison.html" class="button">Back to Scenarios Comparison</a>
+							<a href="comparison.html" class="button">Back to Comparison</a>
 						</div>
 					</div>
 							
