--- a/scenarioDetails.html
+++ b/scenarioDetails.html
@@ -71,6 +71,9 @@
 							<div style="text-align: center;padding-top: 15px;">
 								<a id="download-link" onclick="exportScenario();" class="button">Export Data</a>
 							</div>
+							<div style="text-align: center;padding-top: 15px;">
+								<a href="comparison.html" class="button">Back to Comparison</a>
+							</div>
 						</div>
 						
 					</div>
