--- a/comparison.html
+++ b/comparison.html
@@ -10,8 +10,11 @@
 		<script src="assets/js/d3.v5.min.js"></script>
 	</head>
 	<body class="index is-preload" onload="checkLogin();fillData()">
-		<div id="page-wrapper">
+		<div id="loading-overlay">
+			<div class="loader"></div>
+		</div>
 
+		<div id="page-wrapper">
 			<!-- Header -->
             <header id="header">
                 <h1 id="logo"><a href="comparison.html">What If Analyzer</a></h1>
